fix saving negative breaktime + positioning alerts better

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20201125.1</span> <br>
+					Version: <span id="currentappversion">20201201.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -363,7 +363,7 @@
 				<span aria-hidden="true">&times;</span>
 			</button>
 		</div>		
-		<div id="app_alert" class="alert alert-warning alert-dismissible fade show my-4 mr-1 alertnotification" role="alert">
+		<div id="app_alert" class="alert alert-warning alert-dismissible fade show mr-1 alertnotification" role="alert">
 			<div id="alertmessage"></div>
 			<button type="button" class="close" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
