--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20201201.1</span> <br>
+					Version: <span id="currentappversion">20201208.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -356,6 +356,9 @@
 					</p>
 					<p>
 						Added option for break time based on interval instead of only duration. This can now be toggled in the settings.
+					</p>
+					<p>
+						Changed offset on timings sometimes missing a minute to a more consistent way of calculating.
 					</p>
 				</div>
 			</div>
