--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 					Hitting "ENTER" will add the time corresponding to the selected value next to 'Overtime' to the end date (and break time if defined).
 				</p>
 				<p>
+					<button class="btn btn-outline-secondary btn-sm" onclick="initializeIntroduction();document.getElementById('settingsmodalclosebutton').click();">Run through the "Get started" wizard.</button>
+				</p>
+				<p>
 					<h4>Import / export / delete</h4>
 					If you delete your browser data the history will reset. You can export and import your data.<br><br>
 					<div class="container">
@@ -339,7 +342,7 @@
 
 <!-- Page HTML -->
 <div class="container-fluid h-100">
-	<div class="row d-flex justify-content-center">
+	<div id="alertcontainer" class="row d-flex justify-content-center">
 		<div id="alertnotification" class="alert alert-danger alert-dismissible fade show my-4 mr-1 alertnotification" role="alert">
 			<div class="row">
 				<div class="col-lg-2 text-center py-1 px-4 my-auto">
@@ -367,7 +370,7 @@
 			</button>
 		</div>		
 		<div id="app_alert" class="alert alert-warning alert-dismissible fade show mr-1 alertnotification" role="alert">
-			<div id="alertmessage"></div>
+			<div id="app_alert_message"></div>
 			<button type="button" class="close" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			</button>
@@ -377,16 +380,16 @@
 	<div class="row h-100">
 		<div class="row w-100 align-self-center">
 			<div class="col-lg-2 d-none d-lg-block bg-light"></div>
-			<div class="col-lg-4 rounded-right bg-light">
+			<div id="inputarea" class="col-lg-4 rounded-right bg-light">
 				<form>
 					<div class="form-group pt-3 mr-xs-2 mr-lg-5">
-						<div class="input-group justify-content-end my-1">
+						<div id="divstarttime" class="input-group justify-content-end my-1">
 							<label class="col-form-label" for="start_time" data-toggle="tooltip" data-placement="left" title="Your start time is entered automatically based on the time of opening this window, but you can make adjustments. Set this page as your starting page when opening your browser to make it easy for yourself.">Start time</label>
 							<div class="pr-2 pl-3">
 								<input name="start_time" id="start_time" type="time" class="form-control mx-1 input-fixedwidth100" onchange="calculateTotal();"/>
 							</div>
 						</div>				
-						<div class="input-group justify-content-end my-3">
+						<div id="divbreaktime" class="input-group justify-content-end my-3">
 							<label class="col-form-label" for="break_time_default" data-toggle="tooltip" data-placement="left" title="Choose a default break you take every day. Eg: You're deducted 30 min every day. This value will be saved for the next time the window is opened.You can enter a seperate value manually or by using the buttons too.">
 								Break with default
 							</label>
@@ -409,13 +412,13 @@
 								<input name="break_time" id="break_time" type="time" value="00:00" class="form-control mx-1 input-fixedwidth100" onchange="calculateTotal();"/>
 							</div>
 						</div>
-						<div class="input-group justify-content-end my-3">
+						<div id="divendtime" class="input-group justify-content-end my-3">
 							<label class="col-form-label" for="end_time" data-toggle="tooltip" data-placement="left" title="You can have this automatically filled in by setting the parameter at the bottom of the box. You can manually enter a value.">Time to go home</label>
 							<div class="pr-2 pl-3">
 								<input name="end_time" id="end_time" type="time" class="form-control mx-1 input-fixedwidth100" onchange="calculateTotal();"/>
 							</div>
 						</div>
-						<div class="input-group justify-content-end my-3">
+						<div id="divtotalnobreaktime" class="input-group justify-content-end my-3">
 							<label class="col-form-label" for="totalnobreak" data-toggle="tooltip" data-placement="left" title="These hours are your actual working hours.">Total hours (no break)</label>
 							<div class="pr-2 pl-3">
 								<input name="totalnobreak" id="totalnobreak" type="time" class="form-control mx-1 input-fixedwidth100" value="" disabled>
@@ -461,19 +464,19 @@
 						<div class="input-group justify-content-end my-3">
 							<div id="divovertimeweekly" class="collapse input-group justify-content-end mb-1">
 								<label class="col-form-label" for="overtimeweekly" data-toggle="tooltip" data-placement="left" title="Here you can find howmuch overtime you've built up / used during the current week. This value doesn't include today yet.">Weekly overtime</label>
-							<div class="pr-2 pl-3">
+								<div class="pr-2 pl-3">
 									<input name="overtimeweekly" id="overtimeweekly" type="text" class="font-weight-bold form-control mx-1 input-fixedwidth100" disabled>
 								</div>
 							</div>
 							<div id="divovertimetotal" class="collapse input-group justify-content-end mt-1">
 								<label class="col-form-label" for="overtimetotal" data-toggle="tooltip" data-placement="left" title="Here you can find howmuch overtime you've built up / used during the period you defined in the 'Info' box. This value doesn't include today yet.">Total overtime</label>
-							<div class="pr-2 pl-3">
+								<div class="pr-2 pl-3">
 									<input name="overtimetotal" id="overtimetotal" type="text" class="font-weight-bold form-control mx-1 input-fixedwidth100" disabled>
 								</div>
 							</div>
 						</div>
 						<div class="form-inline">
-							<button type="button" class="btn btn-outline-secondary fontsize60 ml-auto mr-2 py-1 px-2" data-toggle="modal" data-target="#modaledithistory"><i class="fas fa-edit"></i></button>
+							<button id="btnedithistory" type="button" class="btn btn-outline-secondary fontsize60 ml-auto mr-2 py-1 px-2" data-toggle="modal" data-target="#modaledithistory"><i class="fas fa-edit"></i></button>
 							<div id="historycontainer" class="collapse my-3 mr-2">
 								<div id="history" class="w-100"></div>
 							</div>
@@ -498,7 +501,7 @@
 					</div>
 				</form>
 			</div>
-			<div class="col-lg-4 align-self-center text-lg-left text-center">	
+			<div id="buttonarea" class="col-lg-4 align-self-center text-lg-left text-center">	
 				<div class="row">
 					<div class="col col-sm-1 d-none d-xs-block d-sm-block d-md-block d-lg-block"></div>
 					<div class="col">
@@ -535,12 +538,12 @@
 	</div>
 	
 	<!-- Footer HTML -->
-    <div class="row fixed-bottom px-3 py-1">
+    <div id="footer" class="row fixed-bottom px-3 py-1">
 		<div class="col d-flex align-self-center">
 			<span class="mx-2">Senne Janssens &#169; 2020</span>
 		</div>
 		<div class="col d-flex justify-content-end">
-			<div class="btn-group align-self-center" role="group">
+			<div id="footer_button_group" class="btn-group align-self-center" role="group">
 				<button title="Reporting" type="button" class="btn btn-outline-secondary leftbtn footerbtn py-1 px-4" data-toggle="modal" data-target="#modalreporting"><i class="fas fa-chart-line"></i></button>
 				<button title="About" type="button" class="btn btn-outline-secondary middlebtn footerbtn py-1 px-4" data-toggle="modal" data-target="#modalabout"><i class="fas fa-info"></i></button>
 				<button title="Info" type="button" class="btn btn-outline-secondary middlebtn footerbtn py-1 px-4" data-toggle="modal" data-target="#modalinfo"><i class="fas fa-lightbulb"></i></button>
