added asynchronous loading for other javascript files

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					Hitting "ENTER" will add the time corresponding to the selected value next to 'Overtime' to the end date (and break time if defined).
 				</p>
 				<p>
-					<button class="btn btn-outline-secondary btn-sm" onclick="initializeIntroduction();document.getElementById('settingsmodalclosebutton').click();">Run through the "Get started" wizard.</button>
+					<button id="btn_getting_started" class="btn btn-outline-secondary btn-sm" onclick="initializeIntroduction();">Run through the "Get started" wizard.</button>
 				</p>
 				<p>
 					<h4>Import / export / delete</h4>
@@ -569,7 +569,9 @@
 	moment().format();
 </script>
 <script type="text/javascript" src="js/javascript.js"></script>
+<!--
 <script type="text/javascript" src="js/editable_table.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript"  src="js/graphs.js"></script>
+-->
 </html>
