fixed bug introduction wizard not starting - added stoptime graph to reporting

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210106.1</span> <br>
+					Version: <span id="currentappversion">20210107.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -341,6 +341,7 @@
 				</div>
 				<div id="OvertimeDec_div"></div>
 				<div id="StartDec_div"></div>
+				<div id="StopDec_div"></div>
 				<div id="TotalDec_div"></div>
 				<div id="TotalNoBreakDec_div"></div>
 				<div id="BreakDec_div"></div>
@@ -372,6 +373,9 @@
 					</p>
 					<p>
 						Added a more robust timer for the break which will also display the current elapsed time.
+					</p>
+					<p>
+						Added stop time to reporting.
 					</p>
 				</div>
 			</div>
