--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<script type="text/javascript" src="js/graphs.js" defer></script>
 	<script type="text/javascript" src="js/editable_table.js" defer></script>
 	<script type="text/javascript" src="js/introduction.js" async></script>
+	<script type="text/javascript" src="js/leaves.js" async></script>
 </head>
 <body onload="reset();">
 <!-- Modal HTML -->
@@ -43,7 +44,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210111.1</span> <br>
+					Version: <span id="currentappversion">20210111.2</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
