--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<link href="css/bootstrap_specific_style.css" rel="stylesheet" defer>
 	<!-- Moment.js -->
 	<script type="text/javascript" src="js/moment.min.js" defer></script><!-- https://momentjs.com/docs -->
+	<!-- Custom scripting -->
 	<script type="text/javascript" src="js/javascript.js" defer></script>
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" defer></script>
 	<script type="text/javascript" src="js/graphs.js" defer></script>
@@ -44,7 +45,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210111.2</span> <br>
+					Version: <span id="currentappversion">20210112.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -364,19 +365,13 @@
 				</div>
 				<div class="col-lg-10 py-1 px-4">
 					<p>
-						Changed offset on timings sometimes missing a minute to a more consistent way of calculating.
+						Made instructions and user experience for break counter more clear.
 					</p>
 					<p>
-						Added a "Getting started" wizard. <a href="#" onclick="startIntroduction();">Click here to start the wizard now.</a>
+						Added easter egg. If you work long enough you'll be able to spot it!
 					</p>
 					<p>
-						Javascript and CSS files now load asynchronously for a more performant page / app.
-					</p>
-					<p>
-						Added a more robust timer for the break which will also display the current elapsed time.
-					</p>
-					<p>
-						Added stop time to reporting.
+						Bugfix buttons keeping focus after being clicked.
 					</p>
 				</div>
 			</div>
