--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210218.1</span> <br>
+					Version: <span id="currentappversion">20210218.2</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -389,7 +389,7 @@
 	
 	<div class="row h-100">
 		<div class="row w-100 align-self-center">
-			<div class="col-lg-2 d-none d-lg-block bg-light"></div>
+			<div class="col-lg-1 d-none d-lg-block bg-light"></div>
 			<div id="inputarea" class="col-lg-5 rounded-right bg-light">
 				<form>
 					<div class="form-group pt-3 mr-xs-2 mr-lg-5">
@@ -471,7 +471,7 @@
 								<input name="totaldec" id="totaldec" type="text" class="form-control mx-1 mt-1 input-fixedwidth110" disabled>
 							</div>
 						</div>
-						<div class="input-group justify-content-end my-3">
+						<div class="input-group justify-content-end mt-3">
 							<div id="divovertimeweekly" class="collapse input-group justify-content-end mb-1">
 								<label class="col-form-label" for="overtimeweekly" data-toggle="tooltip" data-placement="left" title="Here you can find howmuch overtime you've built up / used during the current week. This value doesn't include today yet.">Weekly overtime</label>
 								<div class="pr-2 pl-3">
@@ -486,7 +486,7 @@
 							</div>
 						</div>
 						<div class="form-inline">
-							<button id="btnedithistory" type="button" class="btn btn-outline-secondary fontsize60 ml-auto mr-2 py-1 px-2" data-toggle="modal" data-target="#modaledithistory"><i class="fas fa-edit"></i></button>
+							<button id="btnedithistory" type="button" class="btn btn-outline-secondary fontsize60 ml-auto mr-2 pb-1 px-2" data-toggle="modal" data-target="#modaledithistory"><i class="fas fa-edit"></i></button>
 							<div id="historycontainer" class="collapse my-3 mr-2">
 								<div id="history" class="w-100"></div>
 							</div>
@@ -513,10 +513,10 @@
 			</div>
 			<div id="buttonarea" class="col-lg-5 align-self-center text-lg-left text-center">	
 				<div class="row">
-					<div class="col col-sm-1 d-none d-xs-block d-sm-block d-md-block d-lg-block"></div>
-					<div class="col">
+					<!-- <div class="col col-sm-1 d-none d-xs-block d-sm-block d-md-block d-lg-block"></div> -->
+					<div class="col ml-xs-2 ml-lg-5">
 						<div class="row">
-							<div class="col my-3 ml-sm-1">
+							<div class="col my-3">
 								<div class="btn-group" role="group">
 									<button type="button" class="btn btn-lg btn-success leftbtn px-4 py-3" onclick="add_time(getHourSchedule())" data-toggle="tooltip" data-placement="bottom" title="Adds the time selected in the hour schedule to the start time and puts it in the 'Time to go home' field."><i class="fal fa-plus"></i> <span id="addtimebutton_span"></span>h</button>
 									<button type="button" class="btn btn-lg btn-success rightbtn px-4 py-3" onclick="end_time()" data-toggle="tooltip" data-placement="bottom" title="Sets the 'Time to go home' field to the current time.">End time now</button>
@@ -541,7 +541,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-2 d-none d-xs-block d-sm-block d-md-block d-lg-block"></div>
+					<!-- <div class="col-sm-2 d-none d-xs-block d-sm-block d-md-block d-lg-block"></div> -->
 				</div>
 			</div>
 		</div>
