--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Working hours</title>
-	<link rel="shortcut icon" type="image/png" href="images/time-png_favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="images/clock64.png"/>
+	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<meta name="robots" content="index">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -45,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210218.2</span> <br>
+					Version: <span id="currentappversion">20210226.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
