added overtime total gauge to reports - made gauge max for days registered dynamic

--- a/index.html
+++ b/index.html
@@ -335,9 +335,10 @@
 					Click right to reset the zoom level.
 				</p>
 				<div class="d-flex justify-content-center w-100 h-100">
-					<div id="DaysRegisteredGauge_div" class="d-flex justify-content-center w-33 h-33"></div>
-					<div id="AvgStarttimeGauge_div" class="d-flex justify-content-center w-33 h-33"></div>
-					<div id="AvgStoptimeGauge_div" class="d-flex justify-content-center w-33 h-33"></div>
+					<div id="DaysRegisteredGauge_div" class="d-flex justify-content-center w-25"></div>
+					<div id="SumOvertimeGauge_div" class="d-flex justify-content-center w-25"></div>
+					<div id="AvgStarttimeGauge_div" class="d-flex justify-content-center w-25"></div>
+					<div id="AvgStoptimeGauge_div" class="d-flex justify-content-center w-25"></div>
 				</div>
 				<div class="d-flex justify-content-center w-100 h-100">
 					<div id="OvertimeDays_div" class="w-50 d-inline-block"></div><div id="Hourschedules_div" class="w-50 d-inline-block"></div>
