--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Working hours</title>
 	<link rel="shortcut icon" type="image/png" href="images/clock64.png"/>
-	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
+	<link rel="manifest" href="manifest.json">
 	<meta name="robots" content="index">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210226.1</span> <br>
+					Version: <span id="currentappversion">20210323.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -367,13 +367,16 @@
 				</div>
 				<div class="col-lg-10 py-1 px-4">
 					<p>
-						Made instructions and user experience for break counter more clear.
+						Added better support for large screens and various layout fixes.
 					</p>
 					<p>
-						Added easter egg. If you work long enough you'll be able to spot it!
+						Fix automatic endtime checkmark not persistent when not saving today is checked.
 					</p>
 					<p>
-						Bugfix buttons keeping focus after being clicked.
+						Gauges in reporting have an additional meter and now include colors and dynamic ranges.
+					</p>
+					<p>
+						Added progressive web app support (or trying to) to make it possible to install the app out of the browser.
 					</p>
 				</div>
 			</div>
