--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210603.1</span> <br>
+					Version: <span id="currentappversion">20210616.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -381,7 +381,7 @@
 				<div class="col-lg-8 py-1 px-4">
 					<p>
 						Added progressive web app support (or trying to) to make it possible to install the app out of the browser.<br>
-						BUGFIX: on top of previous build.
+						BUGFIX: on top of previous build.<br>
 						BUGFIX 2: regarding the service worker.
 					</p>
 					<p>
@@ -389,6 +389,9 @@
 					</p>
 					<p>
 						Tooltips will now be shown with a 2 second delay to be more user-friendly.
+					</p>
+					<p>
+						Added notification sound when the workday is over.
 					</p>
 				</div>
 			</div>
