--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210616.1</span> <br>
+					Version: <span id="currentappversion">20210706.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -385,13 +385,7 @@
 						BUGFIX 2: regarding the service worker.
 					</p>
 					<p>
-						Added a 'save all' and 'delete all' button to the edit history screen so you can make changes in bulk without having to save each entry seperatly.
-					</p>
-					<p>
-						Tooltips will now be shown with a 2 second delay to be more user-friendly.
-					</p>
-					<p>
-						Added notification sound when the workday is over.
+						Added tab message when the day is over.
 					</p>
 				</div>
 			</div>
