--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210722.1</span> <br>
+					Version: <span id="currentappversion">20210723.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -383,6 +383,7 @@
 						Added progressive web app support (or trying to) to make it possible to install the app out of the browser.<br>
 						BUGFIX: on top of previous build.<br>
 						BUGFIX 2: regarding the service worker.
+						BUGFIX 3: regarding the service worker.
 					</p>
 					<p>
 						Added tab message when the day is over.
