Added option to introduce a correction entry for overtime

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210809.1</span> <br>
+					Version: <span id="currentappversion">20210820.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -381,6 +381,9 @@
 				<div class="col-lg-8 py-1 px-4">
 					<p>
 						Bugfix: delete entry wasn't working anymore.
+					</p>
+					<p>
+						Added option to introduce a correction entry for overtime.
 					</p>
 				</div>
 			</div>
