--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210823.1</span> <br>
+					Version: <span id="currentappversion">20210827.2</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -289,19 +289,29 @@
 					<p class="text-danger">
 						To save an entry you need to click the save button! If you add a date that already exists it'll be overwritten!
 					</p>
-					<div class="float-right">
-						<span class="table-add mb-3 mr-2">
-							<!-- <a href="#!" class="text-info my-0 mx-2" title="Add entry"><i class="fas fa-plus fa-2x" aria-hidden="true"></i></a> -->
-							<button type="button" class="btn btn-info my-1 mx-2"><i class="fa fa-plus"></i> Add New</button>
-						</span>
-						<span class="table-save-all mb-3 mr-2">
-							<!-- <a href="#!" class="text-success my-0 mx-2" title="Save all entries"><i class="fas fa-save fa-2x" aria-hidden="true"></i></a> -->
-							<button type="button" class="btn btn-success my-1 mx-2"><i class="fa fa-save"></i> Save all</button>
-						</span>
-						<span class="table-delete-all mb-3 mr-2">
-							<!-- <a href="#!" class="text-danger my-0 mx-2" title="Delete all entries"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a> -->
-							<button type="button" class="btn btn-danger my-1 mx-2"><i class="fa fa-trash"></i> Delete all</button>
-						</span>
+					<div class="row align-items-center justify-content-around">
+						<div class="col-5">
+							<div class="input-group ml-2">
+								<div class="input-group-prepend">
+									<span class="input-group-text rounded-left" id="search-addon1"><i class="fas fa-search" aria-hidden="true"></i></span>
+								</div>
+								<input class="form-control rounded-right" id="edit_history_search" type="search" placeholder="Search dates or corrections" aria-label="Search" aria-describedby="search-addon1">
+							</div>
+						</div>
+						<div class="col-7 text-right">
+							<span class="table-add mr-2">
+								<!-- <a href="#!" class="text-info my-0 mx-2" title="Add entry"><i class="fas fa-plus fa-2x" aria-hidden="true"></i></a> -->
+								<button type="button" class="btn btn-info my-1 mx-2"><i class="fa fa-plus"></i> Add New</button>
+							</span>
+							<span class="table-save-all mr-2">
+								<!-- <a href="#!" class="text-success my-0 mx-2" title="Save all entries"><i class="fas fa-save fa-2x" aria-hidden="true"></i></a> -->
+								<button type="button" class="btn btn-success my-1 mx-2"><i class="fa fa-save"></i> Save all</button>
+							</span>
+							<span class="table-delete-all mr-2">
+								<!-- <a href="#!" class="text-danger my-0 mx-2" title="Delete all entries"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a> -->
+								<button type="button" class="btn btn-danger my-1 mx-2"><i class="fa fa-trash"></i> Delete all</button>
+							</span>
+						</div>
 					</div>
 					<table class="table table-bordered table-responsive-md table-striped text-center">
 						<thead>
@@ -380,10 +390,10 @@
 				</div>
 				<div class="col-lg-8 py-1 px-4">
 					<p>
-						Bugfix: delete entry wasn't working anymore.
+						Bugfix: reporting on correction time.
 					</p>
 					<p>
-						Added option to introduce a correction entry for overtime.
+						Added search filter to edit table.
 					</p>
 				</div>
 			</div>
