Edit table edits to after-filter formatting and heading

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210827.2</span> <br>
+					Version: <span id="currentappversion">20210922.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -289,7 +289,7 @@
 					<p class="text-danger">
 						To save an entry you need to click the save button! If you add a date that already exists it'll be overwritten!
 					</p>
-					<div class="row align-items-center justify-content-around">
+					<div class="row align-items-center justify-content-around mb-2">
 						<div class="col-5">
 							<div class="input-group ml-2">
 								<div class="input-group-prepend">
@@ -313,8 +313,8 @@
 							</span>
 						</div>
 					</div>
-					<table class="table table-bordered table-responsive-md table-striped text-center">
-						<thead>
+					<table class="table table-responsive-lg table-striped table-hover text-center">
+						<thead class="thead-light">
 							<tr>
 							<th class="text-center px-5">Date</th>
 							<th class="text-center">Total Time No Break</th>
@@ -390,10 +390,7 @@
 				</div>
 				<div class="col-lg-8 py-1 px-4">
 					<p>
-						Bugfix: reporting on correction time.
-					</p>
-					<p>
-						Added search filter to edit table.
+						Edit table edits to after-filter formatting and heading
 					</p>
 				</div>
 			</div>
