--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<div class="mb-3">
 						<div class="input-group">
 							<label class="col-form-label" for="startminsubtract_value">Minutes to subtract: </label>
-							<input type="number" name="startminsubtract_value" id="startminsubtract_value" class="form-control flex-grow-0 w-f-80 col-2 mx-1" placeholder="5" min="0" max="60" onchange="startminsubtract()">
+							<input type="number" name="startminsubtract_value" id="startminsubtract_value" class="form-control flex-grow-0 w-f-80 col-2 mx-1" placeholder="5" min="0" max="60" onchange="set_startminsubtract(this.value)">
 						</div>
 					</div>
 				</p>
