--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20210927.1</span> <br>
+					Version: <span id="currentappversion">20211006.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -210,7 +210,7 @@
 									<input type="number" name="historyresetday" id="historyresetday" class="form-control flex-grow-0 w-f-80 col-sm-2 mx-1" min="1" max="31" onchange="maxValuesDeleteOption()">
 									<label class="col-form-label" for="historyresetperiod"> of every </label>
 									<input type="number" name="historyresetperiod" id="historyresetperiod" class="form-control flex-grow-0 w-f-80 col-sm-2 mx-1" min="1" onchange="maxValuesDeleteOption()">
-									<select name="historyresetperiodunit" id="historyresetperiodunit" class="form-control flex-grow-0 w-f-80 col-sm-2 mx-1" onchange="maxValuesDeleteOption()">
+									<select name="historyresetperiodunit" id="historyresetperiodunit" class="form-select flex-grow-0 w-f-80 col-sm-2 mx-1" onchange="maxValuesDeleteOption()">
 										<option value="days">days</option>
 										<option value="weeks">weeks</option>
 										<option value="months">months</option>
@@ -400,11 +400,18 @@
 				</div>
 				<div class="col-lg-8 py-1 px-4">
 					<p>
-						Edit table edits to after-filter formatting and heading
+						Changed table edits to after-filter formatting and heading
 					</p>
 					<p>
 						Migrate layout to Bootstrap 5!<br>
 						This includes some big changes which may result in broken components. If you encounter one of those, pls leave me a message.
+					</p>
+					<p class="mb-0">
+						Bugfixes
+						<ul>
+							<li>Open time subtract not triggering when default value wasn't changed</li>
+							<li>Introduction not restartable</li>
+						</ul>
 					</p>
 				</div>
 			</div>
@@ -433,7 +440,7 @@
 								Break with default
 							</label>
 							<div class="mb-1 mb-md-0 mx-3 me-sm-0">
-								<select name="break_time_default" id="break_time_default" class="form-control mb-md-0 input-fixedwidth90" onchange="addBreakDefault();">
+								<select name="break_time_default" id="break_time_default" class="form-select mb-md-0 input-fixedwidth90" onchange="addBreakDefault();">
 									<option value="0">0 min</option>
 									<option value="0.25">15 min</option>
 									<option value="0.5">30 min</option>
@@ -469,7 +476,7 @@
 								Overtime @
 							</label>
 							<div class="mb-1 mb-md-0 mx-3 me-sm-0">
-								<select name="hourschedule" id="hourschedule" class="form-control input-fixedwidth90" onchange="calculateTotal();" data-bs-toggle="tooltip" data-bs-placement="top" title="This is calculated per day. A day in which the application isn't openend is a day not being saved. For example: if you work 2/5 in 2 full days put this to 7,6 or 8. If you work 2/5 @ 3h per day put it at 3,04.">
+								<select name="hourschedule" id="hourschedule" class="form-select input-fixedwidth90" onchange="calculateTotal();" data-bs-toggle="tooltip" data-bs-placement="top" title="This is calculated per day. A day in which the application isn't openend is a day not being saved. For example: if you work 2/5 in 2 full days put this to 7,6 or 8. If you work 2/5 @ 3h per day put it at 3,04.">
 									<option value="0">0h				&ensp;&nbsp;&emsp;&emsp;&emsp;(working overtime)</option>
 									<option value="3.04">3,04h 			&ensp;&emsp;&emsp;(part-time 2/5, 38h week)</option>
 									<option value="3.12">3,12h 			&ensp;&emsp;&emsp;(part-time 2/5, 39h week)</option>
