--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20211008.2</span> <br>
+					Version: <span id="currentappversion">20211011.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -131,7 +131,13 @@
 					<p class="no-bottom-margin">
 						Select which different stats and options should be visible in the UI.
 					</p>
-					<form>
+					<form class="mb-3">
+						<div class="form-check">
+							<input type="checkbox" class="form-check-input" id="alloption" name="alloption" onclick="allCheckBox(this, 'uiDisplayOptions');">
+							<label class="form-check-label" for="alloption">Show / hide all</label>
+						</div>
+					</form>
+					<form id="uiDisplayOptions">
 						<div class="form-check">
 							<input type="checkbox" class="form-check-input" id="overtimeoption" name="overtimeoption" data-bs-toggle="collapse" data-bs-target="#divovertime">
 							<label class="form-check-label" for="overtimeoption">Show overtime count</label>
@@ -149,7 +155,7 @@
 							<label class="form-check-label" for="totalovertimeoption">Show total overtime balance</label>
 						</div>
 						<div class="form-check">
-							<input type="checkbox" class="form-check-input" id="historyoption" name="historyoption" data-bs-toggle="collapse" data-bs-target="#historycontainer">
+							<input type="checkbox" class="form-check-input" id="historyoption" name="historyoption" data-bs-toggle="collapse" data-bs-target="#historygroup">
 							<label class="form-check-label" for="historyoption">Show history</label>
 						</div>
 						<div class="form-check">
@@ -406,6 +412,9 @@
 						Migrate layout to Bootstrap 5!<br>
 						This includes some big changes which may result in broken components. If you encounter one of those, pls leave me a message.
 					</p>
+					<p>
+						Added show/hide all option for time UI components in settings.
+					</p>
 					<p class="mb-0">
 						Bugfixes
 						<ul>
@@ -526,12 +535,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row collapse" id="historygroup">
 							<div class="col-2 align-self-center d-flex justify-content-end">
 								<button id="btnedithistory" type="button" class="btn btn-outline-secondary fontsize60 ms-auto me-2 pb-1 px-2" data-bs-toggle="modal" data-bs-target="#modaledithistory"><i class="fas fa-edit"></i></button>
 							</div>
 							<div class="col d-flex justify-content-end">
-								<div id="historycontainer" class="collapse my-3 me-2">
+								<div id="historycontainer" class="my-3 me-2">
 									<div id="history" class="w-100"></div>
 								</div>
 							</div>
